--- a/src/components/section-title/section-title.module.scss
+++ b/src/components/section-title/section-title.module.scss
@@ -1,9 +1,12 @@
+$maxWh:550px;
+$main-color:#A6A6A6;
+
 .section-title {
   font-family: Inter, Helvetica, Arial, sans-serif;
   font-size: 50px;
   line-height: 61px;
   font-weight: normal;
-  color: #000;
+  color: $main-color;
   margin-bottom: 40px;
 }
 
@@ -11,7 +14,7 @@
   margin-top: 40px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 550px) {
+@media screen and (max-width: $maxWh) {
   .section-title {
     font-size: 32px;
     line-height: 39px;
