--- a/src/components/section-title/section-title.module.scss
+++ b/src/components/section-title/section-title.module.scss
@@ -1,11 +1,13 @@
-$maxWh:550px;
-$main-color:#A6A6A6;
+$maxWh: 550px;
+$main-color: #a6a6a6;
+$Text-color: #333;
+$Main-Font: Euclid Circular B;
 
 .section-title {
-  font-family: Inter, Helvetica, Arial, sans-serif;
-  font-size: 50px;
-  line-height: 61px;
-  font-weight: normal;
+  font-family: sans-serif, $Main-Font;
+  font-size: 85px;
+  line-height: 80px;
+  font-weight: 600;
   color: $main-color;
   margin-bottom: 40px;
 }
