--- a/src/components/option-box/option-box.module.scss
+++ b/src/components/option-box/option-box.module.scss
@@ -1,24 +1,76 @@
 $maxWh:550px;
 $main-color:#A6A6A6;
 $fMain:sans-serif, Euclid Circular B;
-$hoverC:#881EFF;
-
+$checkedCol:#881EFF;
+$pressed:#46058F;
 
 .option-box {
-  //styleName: Footnote;
   font-family: $fMain;
   font-size: 12px;
   line-height: 61px;
   font-weight: normal;
   color: $main-color;
-  margin-bottom: 40px;
+  position: relative;
+  align-items: center;
+  display: flex;
+  margin-bottom: 32px;
+  height: 20px;
+
+  &:hover > .small-span {
+    border: 2px solid #000000;
+    transition-duration: .3s;
+  }
+  &:hover > .checkmark {
+    transition-duration: .3s;
+    color: black;
+  }
+  &:active > .small-span {
+    border: 2px solid $pressed;
+    transition-duration: .3s;
+  }
+
 }
 .checkbox {
   background-color: $main-color;
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+
+  &:checked + .small-span{
+    border:2px solid $checkedCol;
+    background-image: url('./Active.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    color:$checkedCol;
+  }
+
+}
+.form__ellipse:checked + .form__span {
+  background-color: #000;
 }
 .checkmark {
   margin-left: 10px;
   position: relative;
-  bottom:1px
+  &:checked > .option-box {
+    color:$checkedCol;
+  }
+}
+.checkmark_checked {
+  color: $checkedCol;
+  transition-duration: .3s;
+}
+.small-span {
+  display: inline-block;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  border: 2px solid #CBCBCB;
+
+
+  &:active {
+    border: 2px solid #46058F;
+  }
 }
 
