--- a/src/ui/button/button.module.scss
+++ b/src/ui/button/button.module.scss
@@ -13,6 +13,9 @@ $tColor: #fff;
   font-size: 15px;
   line-height: 20px;
   border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &__text {
     text-align: center;
