--- a/src/components/sound-timeline/sound-timeline.module.scss
+++ b/src/components/sound-timeline/sound-timeline.module.scss
@@ -2,18 +2,17 @@
   clear: both;
   cursor: pointer;
   padding: 0;
-  background-color: #CBCBCB;
+  background-color: #cbcbcb;
 
   overflow: hidden;
   height: 2px;
   width: 100%;
-  margin-top: 276px;
-  margin-bottom: 276px;
+  margin-top: 138px;
+  margin-bottom: 138px;
 
-&__progress {
-  background-color: #333;
-  height: 100%;
-  width: 0;
+  &__progress {
+    background-color: #333;
+    height: 100%;
+    width: 0;
+  }
 }
-}
-
