--- a/src/ui/button/button.module.scss
+++ b/src/ui/button/button.module.scss
@@ -16,6 +16,7 @@ $tColor: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 119px;
 
   &__text {
     text-align: center;
