add style in buttin

--- a/src/ui/button/button.module.scss
+++ b/src/ui/button/button.module.scss
@@ -29,4 +29,10 @@ $tColor: #fff;
   &_color_red {
     background-color: $btnStopColor;
   }
+  &:hover {
+    background-color: #881eff;
+  }
+  :active {
+    background-color: #46058f;
+  }
 }
